Newsletter: fix horizontal scroll on mobile after successful submission / when focusing the input

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -90,6 +90,11 @@
   font-weight: 500;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 @layer base {
   .prose a {
     text-decoration: none;
